<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".fragments.FirstFragment">

    <Button
        android:id="@+id/info_bt"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|right"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/info_bt"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginBottom="320dp"
        android:padding="0dp"
        android:src="@drawable/phon_for_temp" />
    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="285dp"
        android:text="Moscow"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />


    <TextView
        android:id="@+id/umbrella_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:fontFamily="serif"
        android:shadowColor="#000000"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="Umbrella"
        android:textColor="@color/white"
        android:textSize="50sp" />




    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:text="Smt"
        android:textSize="25sp"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/white"
        android:layout_marginBottom="75dp"
        android:text="29°C"
        android:textSize="90dp" />
    <TextView
        android:id="@id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Min Temp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:layout_marginEnd="80dp"/>
    <TextView
        android:id="@id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Max temp"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:maxLines="1"
        android:textColor="@color/black"
        android:hint="City"
        android:textColorHint="@color/grey"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="@drawable/edits2"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/searchCity"
        android:layout_width="17dp"
        android:layout_height="17dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/ic_baseline_search_24"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true" />
    <LinearLayout
        android:id="@+id/detailsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/sunrise"
                    app:tint="#FFFFFF" />


                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunrise"
                    android:textColor="@android:color/white"
                    android:textSize="10dp" />


                <TextView
                    android:id="@+id/minTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minTemp"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />


            <LinearLayout
                android:id="@+id/raws"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/sunset"
                    app:tint="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sunset"
                    android:textColor="@android:color/white"
                    android:textSize="10dp" />

                <TextView
                    android:id="@+id/maxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/maxTemp"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/wind"
                    app:tint="#FFFFFF" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Wind"
                    android:textColor="@android:color/white"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/windSpeed"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <LinearLayout
            android:id="@+id/bottomRaws"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/pressure"
                    app:tint="@color/black" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pressure"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airPressure"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/humidity"
                    app:tint="@color/black" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:id="@id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Humidity"
                    android:textColor="@android:color/black"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@android:color/white"
                    android:textSize="14dp"
                    android:visibility="gone" />

            </LinearLayout>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/umbrella_bn"
                android:layout_width="0dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/umbrella_black"
                    app:tint="@color/black" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="City photo"
                    android:textColor="@android:color/black"
                    android:textSize="14dp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:text="Something went wrong"
        android:visibility="gone" />


</FrameLayout>